# ppt-mcp

./: .gitignore  README.md  README_ja.md  pyproject.toml
.github/workflows/: publish.yml
assets/examples/example1/: flowly_intro.pptx  prompt.txt
assets/examples/example2/: async_advantage.pptx  prompt.txt
assets/examples/example3/: noteai_pitch.pptx  prompt.txt
docs/: architecture.md  requirements.md
docs/modules/: core_and_utils.md  placeholders.md  presentation_and_slides.md  shapes.md  slideshow_export_media.md  tables_and_charts.md  text_and_formatting.md
docs/research/: 01_application_window_presentation.md  02_slides_and_shapes.md  03_text_and_formatting.md  04_tables_charts_media_advanced.md  05_placeholders_and_masters.md  06_ui_automation_com_sendkeys.md  07_ui_automation_windows_uia.md  08_hybrid_com_ui_patterns.md  09_missing_operations_audit.md  com_template_api.md
scripts/: count_tools.sh
src/: server.py
src/ppt_com/: __init__.py  advanced_ops.py  animation.py  app.py  batch_apply.py  charts.py  comments.py  connectors.py  constants.py  edit_ops.py  effects.py  export.py  formatting.py  freeform.py  groups.py  hyperlinks.py  layout.py  media.py  placeholders.py  presentation.py  properties.py  sections.py  shapes.py  slides.py  slideshow.py  smartart.py  tables.py  text.py  themes.py
src/utils/: __init__.py  color.py  com_wrapper.py  navigation.py  onedrive.py  redraw.py  units.py  validation.py
tests/: conftest.py  test_lazy_connect.py  test_redraw.py  test_schema.py  test_slides_layout.py  test_utils.py  test_validators.py
