[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppt-com-mcp"
version = "0.1.0"
description = "The world's best PowerPoint MCP server - Real-time PowerPoint control via COM automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pywin32>=306",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ppt-com-mcp = "server:main"
